// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lti-status error shows a loading state when loading 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <div
    className="obojobo-draft--components--button align-center"
  >
    <button
      disabled={true}
      onClick={undefined}
      tabIndex={undefined}
    >
      Resending Score...
    </button>
  </div>
</div>
`;

exports[`lti-status error shows additional information if error count is above 0 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <p>
    <strong>
      Sorry - That didn't work.
    </strong>
     Most likely the connection to mocklti has expired and just needs to be refreshed. Please close this tab or window, reopen this module from mocklti, return to this page and then resend your score.
  </p>
  <div
    className="obojobo-draft--components--button dangerous align-center"
  >
    <button
      disabled={undefined}
      onClick={[MockFunction]}
      tabIndex={undefined}
    >
      Try again anyway
    </button>
  </div>
</div>
`;

exports[`lti-status renders error for error gradebook statuses 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-synced"
>
  <h2>
    There was a problem sending your score to mocklti.
  </h2>
  <p>
    Don’t worry - your score is safely recorded here. We just weren’t able to send it to mocklti. Click the button below to resend your score:
  </p>
  <div
    className="obojobo-draft--components--button dangerous align-center"
  >
    <button
      disabled={undefined}
      onClick={[MockFunction]}
      tabIndex={undefined}
    >
      Resend score
    </button>
  </div>
</div>
`;

exports[`lti-status renders no error message for ok_gradebook_matches_assessment_score 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-synced"
>
  ✔ Your recorded score of NaN% was sent to mocklti
</div>
`;

exports[`lti-status renders nothing for ok_no_outcome_service or ok_null_score_not_sent gradebook statuses 1`] = `
<div
  className="obojobo-draft--sections--assessment--lti-status is-not-lti"
>
   
</div>
`;
